--- a/netlify-cms@2/dev-test/config.yml
+++ b/netlify-cms@2/dev-test/config.yml
@@ -72,7 +72,7 @@ collections: # A list of collections the CMS should be able to edit
         description: 'General Site Settings'
         fields:
           - { label: 'Global title', name: 'site_title', widget: 'string' }
-          - label: 'Post Setting'
+          - label: 'Post Settings'
             name: posts
             widget: 'object'
             fields:
