--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ecomplus/storefront-cms",
-  "version": "2.0.0-alpha",
+  "version": "2.0.0-alpha.0",
   "description": "Content and page builder for Storefront based on Netlify CMS",
   "main": "netlify-cms@2/packages/netlify-cms/src/index.js",
   "scripts": {
