--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,6 @@ jobs:
   build:
     name: Build Storefront CMS package
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-        working-directory: netlify-cms@2
 
     steps:
       - name: Checkout
@@ -25,14 +21,8 @@ jobs:
         with:
           node-version: '14.x'
 
-      - name: Install dependencies
-        run: yarn
-
-      - name: Lerna bootstrap
-        run: yarn bootstrap
-      
-      - name: Run build
-        run: yarn build:app
+      - name: Bootstrap dependencies and build
+        run: cd netlify-cms@2 && yarn && yarn bootstrap && yarn build:app
 
       - name: Push output JS to dist branch
         uses: JamesIves/github-pages-deploy-action@releases/v3
