chore(release): 2.0.0-alpha.2

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@ecomplus/storefront-cms",
-  "version": "2.0.0-alpha.1",
+  "version": "2.0.0-alpha.2",
+  "private": true,
   "description": "Content and page builder for Storefront based on Netlify CMS",
   "main": "netlify-cms@2/packages/netlify-cms/src/index.js",
   "scripts": {
