chore(release): dist

--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "@ecomplus/storefront-cms",
   "version": "2.0.0-alpha.6",
-  "private": true,
   "description": "Content and page builder for Storefront based on Netlify CMS",
   "main": "netlify-cms@2/packages/netlify-cms/src/index.js",
+  "files": [
+    "/dist/*"
+  ],
   "scripts": {
     "postinstall": "husky install",
-    "release": "standard-version --prerelease alpha"
+    "build": "cd netlify-cms* && yarn build:app && npx ncp packages/netlify-cms-app/dist ../dist && cd ..",
+    "version": "standard-version --prerelease alpha",
+    "release": "npm run build && git add dist && git commit -m 'chore(release): dist' && npm run version"
   },
   "repository": {
     "type": "git",
@@ -22,6 +26,11 @@
     "@commitlint/cli": "^16.0.1",
     "@commitlint/config-conventional": "^16.0.0",
     "husky": "^7.0.4",
+    "ncp": "^2.0.0",
     "standard-version": "^9.3.2"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/",
+    "access": "public"
   }
 }
