--- a/netlify-cms@2/dev-test/config.yml
+++ b/netlify-cms@2/dev-test/config.yml
@@ -110,16 +110,16 @@ collections: # A list of collections the CMS should be able to edit
     folder: '_sink'
     create: true
     fields:
-      # - label: 'Related Post'
-      #   name: 'post'
-      #   widget: 'relationKitchenSinkPost'
-      #   collection: 'posts'
-      #   display_fields: ['title', 'date']
-      #   search_fields: ['title', 'body']
-      #   value_field: 'title'
+      - label: 'Related Post'
+        name: 'post'
+        widget: 'relationKitchenSinkPost'
+        collection: 'posts'
+        display_fields: ['title', 'date']
+        search_fields: ['title', 'body']
+        value_field: 'title'
       - { label: 'Title', name: 'title', widget: 'string' }
-      # - { label: 'Boolean', name: 'boolean', widget: 'boolean', default: true }
-      # - { label: 'Map', name: 'map', widget: 'map' }
+      - { label: 'Boolean', name: 'boolean', widget: 'boolean', default: true }
+      - { label: 'Map', name: 'map', widget: 'map' }
       - { label: 'Text', name: 'text', widget: 'text', hint: 'Plain text, not markdown' }
       - { label: 'Number', name: 'number', widget: 'number', hint: 'To infinity and beyond!' }
       - { label: 'Markdown', name: 'markdown', widget: 'markdown' }
