--- a/netlify-cms@2/package.json
+++ b/netlify-cms@2/package.json
@@ -180,6 +180,9 @@
   "private": true,
   "dependencies": {
     "@emotion/babel-preset-css-prop": "^10.0.27",
+    "@tiptap/core": "^2.0.0-beta.174",
+    "@tiptap/react": "^2.0.0-beta.108",
+    "@tiptap/starter-kit": "^2.0.0-beta.183",
     "emotion": "^10.0.9",
     "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-babel": "^5.3.0",
