--- a/netlify-cms@2/dev-test/config.yml
+++ b/netlify-cms@2/dev-test/config.yml
@@ -110,68 +110,68 @@ collections: # A list of collections the CMS should be able to edit
     folder: '_sink'
     create: true
     fields:
-      # - label: 'Related Post'
-      #   name: 'post'
-      #   widget: 'relationKitchenSinkPost'
-      #   collection: 'posts'
-      #   display_fields: ['title', 'date']
-      #   search_fields: ['title', 'body']
-      #   value_field: 'title'
-      # - { label: 'Title', name: 'title', widget: 'string' }
-      # - { label: 'Boolean', name: 'boolean', widget: 'boolean', default: true }
-      # - { label: 'Map', name: 'map', widget: 'map' }
-      # - { label: 'Text', name: 'text', widget: 'text', hint: 'Plain text, not markdown' }
-      # - { label: 'Number', name: 'number', widget: 'number', hint: 'To infinity and beyond!' }
+      - label: 'Related Post'
+        name: 'post'
+        widget: 'relationKitchenSinkPost'
+        collection: 'posts'
+        display_fields: ['title', 'date']
+        search_fields: ['title', 'body']
+        value_field: 'title'
+      - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Boolean', name: 'boolean', widget: 'boolean', default: true }
+      - { label: 'Map', name: 'map', widget: 'map' }
+      - { label: 'Text', name: 'text', widget: 'text', hint: 'Plain text, not markdown' }
+      - { label: 'Number', name: 'number', widget: 'number', hint: 'To infinity and beyond!' }
       - { label: 'Markdown', name: 'markdown', widget: 'markdown' }
-      # - { label: 'Datetime', name: 'datetime', widget: 'datetime' }
-      # - { label: 'Date', name: 'date', widget: 'date' }
-      # - { label: 'Color', name: 'color', widget: 'color' }
-      # - {
-      #     label: 'Color string editable and alpha enabled',
-      #     name: 'colorEditable',
-      #     widget: 'color',
-      #     enableAlpha: true,
-      #     allowInput: true,
-      #   }
-      # - { label: 'Image', name: 'image', widget: 'image' }
-      # - { label: 'File', name: 'file', widget: 'file' }
-      # - { label: 'Select', name: 'select', widget: 'select', options: ['a', 'b', 'c'] }
-      # - {
-      #     label: 'Select multiple',
-      #     name: 'select_multiple',
-      #     widget: 'select',
-      #     options: ['a', 'b', 'c'],
-      #     multiple: true,
-      #   }
-      # - {
-      #     label: 'Select numeric',
-      #     name: 'select_numeric',
-      #     widget: 'select',
-      #     options:
-      #       [{ label: 'One', value: 1 }, { label: 'Two', value: 2 }, { label: 'Three', value: 3 }],
-      #   }
-      # - { label: 'Hidden', name: 'hidden', widget: 'hidden', default: 'hidden' }
-      # - label: 'Object'
-      #   name: 'object'
-      #   widget: 'object'
-      #   collapsed: true
-      #   fields:
-      #     - label: 'Related Post'
-      #       name: 'post'
-      #       widget: 'relationKitchenSinkPost'
-      #       collection: 'posts'
-      #       search_fields: ['title', 'body']
-      #       value_field: 'title'
-      #     - { label: 'String', name: 'string', widget: 'string' }
-      #     - { label: 'Boolean', name: 'boolean', widget: 'boolean', default: false }
-      #     - { label: 'Text', name: 'text', widget: 'text' }
-      #     - { label: 'Number', name: 'number', widget: 'number' }
-      #     - { label: 'Markdown', name: 'markdown', widget: 'markdown' }
-      #     - { label: 'Datetime', name: 'datetime', widget: 'datetime' }
-      #     - { label: 'Date', name: 'date', widget: 'date' }
-      #     - { label: 'Image', name: 'image', widget: 'image' }
-      #     - { label: 'File', name: 'file', widget: 'file' }
-      #     - { label: 'Select', name: 'select', widget: 'select', options: ['a', 'b', 'c'] }
+      - { label: 'Datetime', name: 'datetime', widget: 'datetime' }
+      - { label: 'Date', name: 'date', widget: 'date' }
+      - { label: 'Color', name: 'color', widget: 'color' }
+      - {
+          label: 'Color string editable and alpha enabled',
+          name: 'colorEditable',
+          widget: 'color',
+          enableAlpha: true,
+          allowInput: true,
+        }
+      - { label: 'Image', name: 'image', widget: 'image' }
+      - { label: 'File', name: 'file', widget: 'file' }
+      - { label: 'Select', name: 'select', widget: 'select', options: ['a', 'b', 'c'] }
+      - {
+          label: 'Select multiple',
+          name: 'select_multiple',
+          widget: 'select',
+          options: ['a', 'b', 'c'],
+          multiple: true,
+        }
+      - {
+          label: 'Select numeric',
+          name: 'select_numeric',
+          widget: 'select',
+          options:
+            [{ label: 'One', value: 1 }, { label: 'Two', value: 2 }, { label: 'Three', value: 3 }],
+        }
+      - { label: 'Hidden', name: 'hidden', widget: 'hidden', default: 'hidden' }
+      - label: 'Object'
+        name: 'object'
+        widget: 'object'
+        collapsed: true
+        fields:
+          - label: 'Related Post'
+            name: 'post'
+            widget: 'relationKitchenSinkPost'
+            collection: 'posts'
+            search_fields: ['title', 'body']
+            value_field: 'title'
+          - { label: 'String', name: 'string', widget: 'string' }
+          - { label: 'Boolean', name: 'boolean', widget: 'boolean', default: false }
+          - { label: 'Text', name: 'text', widget: 'text' }
+          - { label: 'Number', name: 'number', widget: 'number' }
+          - { label: 'Markdown', name: 'markdown', widget: 'markdown' }
+          - { label: 'Datetime', name: 'datetime', widget: 'datetime' }
+          - { label: 'Date', name: 'date', widget: 'date' }
+          - { label: 'Image', name: 'image', widget: 'image' }
+          - { label: 'File', name: 'file', widget: 'file' }
+          - { label: 'Select', name: 'select', widget: 'select', options: ['a', 'b', 'c'] }
       - label: 'List'
         name: 'list'
         widget: 'list'
