--- a/netlify-cms@2/package.json
+++ b/netlify-cms@2/package.json
@@ -62,8 +62,7 @@
     "publish:graduate:version": "run-s \"publish:version --conventional-graduate\"",
     "publish:graduate:dry-run": "run-s \"publish:version --conventional-graduate --no-git-tag-version\"",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "prepare": "husky install"
+    "build-storybook": "build-storybook"
   },
   "browserslist": [
     "last 2 Chrome versions",
