Squashed 'static-cms/' changes from 279686f4f..4f5912612
4f5912612 Update releases.json
fabe8eb27 v2.1.0
cca6a5674 Merge branch 'v2'
288fd9948 Update netlify.toml
2ff358790 feat: add prefix to uuid widget (#764)
42c524827 chore(deps): update typescript-eslint monorepo to v5.59.1 (#761)
9a2afc481 chore(deps): bump yaml from 2.2.1 to 2.2.2 (#762)
d0e087d58 fix: sidebar height (#760)
60230872a Merge branch 'v2'
e247dcfb8 docs: add direct from netlify domain
1cb427cab v2.0.1
5629a15d3 fix; types for custom card and preview
fbbbf64f5 fix: type for registerFieldPreview

git-subtree-dir: static-cms
git-subtree-split: 4f59126128da6426790f25cf12d58c69e0d7b2a9

--- a/packages/core/dev-test/config.yml
+++ b/packages/core/dev-test/config.yml
@@ -864,6 +864,10 @@ collections:
             label: Does not allow regeneration
             widget: uuid
             allow_regenerate: false
+          - name: with_prefix
+            label: With Prefix
+            widget: uuid
+            prefix: 'book/'
   - name: settings
     label: Settings
     delete: false
